GitPjt/force-app/main/default/objects/Account/fields/CustomFormular1__c.field-meta.xml
<CustomField>
    <fullName>CustomFormular1__c</fullName>
    <formula>&quot;CustomFormular 値1&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CustomFormular1</label>
    <type>Text</type>
</CustomField>