GitPjt/force-app/main/default/objects/Account/fields/Customnumber1__c.field-meta.xml
<CustomField>
    <fullName>Customnumber1__c</fullName>
    <label>Customnumber1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>