GitPjt/force-app/main/default/objects/Account/fields/CustomText1__c.field-meta.xml
<CustomField>
    <fullName>CustomText1__c</fullName>
    <label>CustomText1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>